--- a/pages/5-stylebinding.html
+++ b/pages/5-stylebinding.html
@@ -27,6 +27,22 @@
       <div :class="secilenStil">Merhaba</div>
       <hr />
       <div :class="[bgBasarili,yaziBeyaz,'jumbotron']">Merhaba</div>
+      <hr>
+      <div class="form-group row">
+          <label for="isim" class="col-sm-2">İsim</label>
+          <div class="col-sm-10">
+              <input type="text" id="isim" v-model="kullanici.isim" :class="{ 'form-control is-valid': kullanici.isim, 'form-control is-invalid': !kullanici.isim }">
+          </div>
+      </div>    
+      <div class="form-group row">
+        <label for="isim" class="col-sm-2">Rol</label>
+        <div class="col-sm-10">
+            <span :class="{ 'badge badge-success text-success':kullanici.rol == 'Admin', 'badge badge-warning':kullanici.rol == 'User' }">
+                {{  kullanici.rol }}
+            </span>
+        </div>
+    </div>
+
     </div>
 
     <script
@@ -48,6 +64,11 @@
           secilenStil: "alert alert-success",
           bgBasarili: "bg-success",
           yaziBeyaz: 'text-white',
+          kullanici : {
+              id:1,
+              isim: 'Cem',
+              rol: 'Admin'
+          }
         },
       });
     </script>
