Style binding has been viewed

--- a/pages/4-attributebinding.html
+++ b/pages/4-attributebinding.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- 
-         v-bind yazmak yerine : yazılabilir.
+         v-bind yazmak yerine sadece : kullanarak yazılabilir.
          id'leri + koyarak birleştirebilirsin.
     -->
 
