--- a/applications/usermanagement/usermanagement.html
+++ b/applications/usermanagement/usermanagement.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>UserManagement | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -16,6 +16,7 @@
       rel="stylesheet"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <div id="app" class="p-5">
@@ -78,7 +79,7 @@
             </div>
             <div class="modal-body">
               <form @submit.prevent="true">
-                <div :class="alerttype" v-text="alerttext" role="alert"></div>
+                <div :class="alertType" v-text="alertText" role="alert"></div>
                 <div class="mb-3">
                   <label for="emailAddress" class="form-label">Email</label>
                   <input
