--- a/pages/1-instance.html
+++ b/pages/1-instance.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>Instance | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <div id="app"></div>
-
-
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -29,19 +27,16 @@
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script>
-    
-    //Oluşturduğumuz vue nesnelerini bir değişkene atayabiliriz.
-     const app =  new Vue({
+      //Oluşturduğumuz vue nesnelerini bir değişkene atayabiliriz.
+      const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
           mesaj: "Hello World",
         },
       });
-
-    //app.$data diyerek data içindeki bütün nesneleri alabilmekteyiz.$ bütün elemanları almak için kullanabiliriz.
-    //app.mesaj diyerek mesaj içeriğini okuyabiliriz.
-
+      //app.$data diyerek data içindeki bütün nesneleri alabilmekteyiz.$ bütün elemanları almak için kullanabiliriz.
+      //app.mesaj diyerek mesaj içeriğini okuyabiliriz.
     </script>
   </body>
 </html>
