--- a/pages/2-lifecycle.html
+++ b/pages/2-lifecycle.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>Lifecycle | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <div id="app">{{ sayi }}</div>
@@ -29,7 +30,7 @@
     <script>
       const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
           sayi: 5,
         },
