--- a/pages/3-databinding.html
+++ b/pages/3-databinding.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>DataBinding | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <!-- 
@@ -19,21 +20,21 @@
     -->
 
     <div id="app" class="p-5">
-      <p>{{ mesaj }}</p>
-      <p v-text="mesaj_html"></p>
-      <p v-html="mesaj_html"></p>
+      <p>{{ message }}</p>
+      <p v-text="message_html"></p>
+      <p v-html="message_html"></p>
       <hr />
       <div>
         <label>Mesaj</label>
-        <input type="text" v-model="mesaj_html" class="form-control" />
+        <input type="text" v-model="message_html" class="form-control" />
       </div>
       <div>
         <label>Fiyat</label>
         <!-- model.number yazmak constraint mantığıyla çalışmaktadır. -->
-        <input type="text" v-model.number="fiyat" class="form-control" />
-        <p>KDV Tutarı : {{ fiyat * 18 / 100 }}</p>
-        <p>{{ (fiyat * 18 / 100)< 5 ? 'KDV Düşük' : 'KDV Yüksek' }}</p>
-        <p v-once>{{ (fiyat *18 /100)<5 ? "KDV Düşük" : "KDV Yüksek" }}</p>
+        <input type="text" v-model.number="price" class="form-control" />
+        <p>KDV Tutarı : {{ price * 18 / 100 }}</p>
+        <p>{{ (price * 18 / 100)< 5 ? 'KDV Düşük' : 'KDV Yüksek' }}</p>
+        <p v-once>{{ (price *18 /100)<5 ? "KDV Düşük" : "KDV Yüksek" }}</p>
       </div>
     </div>
 
@@ -51,11 +52,11 @@
     <script>
       const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
-          mesaj: "Hello World",
-          mesaj_html: "Merhaba <b>Cem</b>",
-          fiyat: 12,
+          message: "Hello World",
+          message_html: "Merhaba <b>Cem</b>",
+          price: 12,
         },
       });
     </script>
