--- a/pages/4-attributebinding.html
+++ b/pages/4-attributebinding.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>AttributeBinding | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <!-- 
@@ -19,8 +20,8 @@
     -->
 
     <div id="app" class="p-5">
-      <p><a v-bind:href="linkSite" v-bind:title="linkAciklama">{{ linkAciklama }}</a></p>
-      <p><a :href="linkSite" :title="linkAciklama">{{ linkAciklama }}</a></p>
+      <p><a v-bind:href="linkSite" v-bind:title="linkDescription">{{ linkDescription }}</a></p>
+      <p><a :href="linkSite" :title="linkDescription">{{ linkDescription }}</a></p>
       <hr>
       <div :id="'kurs' + id">Kurs {{ id }}</div>
     </div>
@@ -39,10 +40,10 @@
     <script>
       const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
           linkSite: 'http://www.uzaktankurs.com',
-          linkAciklama: 'Uzaktan Kurs',
+          linkDescription: 'Uzaktan Kurs',
           id: 5
         },
       });
