--- a/pages/5-stylebinding.html
+++ b/pages/5-stylebinding.html
@@ -1,49 +1,50 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>StyleBinding | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <!-- 
         'jumbotron' tırnak işaretiyle yazdığın zaman manuel değer gireceğin anlamına gelmektedir.  
     -->
     <div id="app" class="p-5">
-      <select v-model="secilenStil" class="form-control">
+      <select v-model="selectedStyle" class="form-control">
         <option>alert alert-success</option>
         <option>alert alert-warning</option>
         <option>alert alert-info</option>
         <option>alert alert-danger</option>
       </select>
 
-      <div :class="secilenStil">Merhaba</div>
+      <div :class="selectedStyle">Merhaba</div>
       <hr />
-      <div :class="[bgBasarili,yaziBeyaz,'jumbotron']">Merhaba</div>
+      <div :class="[bgSuccess,textWhite,'jumbotron']">Merhaba</div>
       <hr>
       <div class="form-group row">
-          <label for="isim" class="col-sm-2">İsim</label>
+          <label for="name" class="col-sm-2">İsim</label>
           <div class="col-sm-10">
-              <input type="text" id="isim" v-model="kullanici.isim" :class="{ 'form-control is-valid': kullanici.isim, 'form-control is-invalid': !kullanici.isim }">
+              <input type="text" id="name" v-model="user.name" :class="{ 'form-control is-valid': user.name, 'form-control is-invalid': !user.name }">
           </div>
       </div>    
       <div class="form-group row">
-        <label for="isim" class="col-sm-2">Rol</label>
+        <label for="role" class="col-sm-2">Rol</label>
         <div class="col-sm-10">
-            <span :class="{ 'badge badge-success text-success':kullanici.rol == 'Admin', 'badge badge-warning':kullanici.rol == 'User' }">
-                {{  kullanici.rol }}
+            <span :class="{ 'badge badge-success text-success':user.role == 'Admin', 'badge badge-warning':user.role == 'User' }">
+                {{  user.role }}
             </span>
         </div>
     </div>
 
-    <div :style="styleOrnek">Hello World!</div>
+    <div :style="styleExample">Hello World!</div>
     </div>
 
     <script
@@ -62,16 +63,16 @@
         el: "#app",
         name: "Uzaktan Kurs",
         data: {
-          secilenStil: "alert alert-success",
-          bgBasarili: "bg-success",
-          yaziBeyaz: 'text-white',
-          kullanici : {
+          selectedStyle: "alert alert-success",
+          bgSuccess: "bg-success",
+          textWhite: 'text-white',
+          user : {
               id:1,
-              isim: 'Cem',
-              rol: 'Admin'
+              name: 'Cem',
+              role: 'Admin'
           },
           //color ve fontsize değerlerinin değişken olarak tanımlanmaması için '' olarak işaretlenmesi gerekir.
-          styleOrnek:{
+          styleExample:{
               color: 'red',
               fontSize: '18px'
           }
