--- a/pages/6-listmodel.html
+++ b/pages/6-listmodel.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>ListModel | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <!-- 
@@ -23,11 +24,11 @@
         <tr class="bg-success text-white">
           <th>isim</th>
         </tr>
-        <tr v-for="kullanici in kullanicilar">
-          <td>{{ kullanici }}</td>
+        <tr v-for="userName in userNames">
+          <td>{{ userName }}</td>
         </tr>
       </table>
-      <h1>Kullanıcılar ({{ kullanicilar2.length}} kullanıcı)</h1>
+      <h1>Kullanıcılar ({{ users.length}} kullanıcı)</h1>
       <table class="table table-bordered table-hover">
         <tr class="bg-success text-white">
           <th>index</th>
@@ -35,11 +36,11 @@
           <th>isim</th>
           <th>rol</th>
         </tr>
-        <tr v-for="(kullanici2,index) in kullanicilar2">
+        <tr v-for="(user,index) in users">
           <td>{{ index }}</td>
-          <td>{{ kullanici2.id }}</td>
-          <td>{{ kullanici2.isim }}</td>
-          <td>{{ kullanici2.rol }}</td>
+          <td>{{ user.id }}</td>
+          <td>{{ user.name }}</td>
+          <td>{{ user.role }}</td>
         </tr>
       </table>
     </div>
@@ -58,24 +59,24 @@
     <script>
       const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
-          kullanicilar: ["Cem", "Esra", "Ceyda"],
-          kullanicilar2: [
+          userNames: ["Cem", "Esra", "Ceyda"],
+          users: [
             {
               id: 1,
-              isim: "Cem",
-              rol: "Admin",
+              name: "Cem",
+              role: "Admin",
             },
             {
               id: 2,
-              isim: "Esra",
-              rol: "User",
+              name: "Esra",
+              role: "User",
             },
             {
               id: 3,
-              isim: "Ceyda",
-              rol: "Admin",
+              name: "Ceyda",
+              role: "Admin",
             },
           ],
         },
