--- a/pages/7-events.html
+++ b/pages/7-events.html
@@ -1,33 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vue</title>
+    <title>Events | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
   </head>
   <body>
     <div id="app" class="p-5">
-      <div class="alert alert-success">{{ mesaj }}</div>
-      <button class="btn btn-sm btn-info" v-on:click="karsila">Karşıla</button>
-      <button class="btn btn-sm btn-danger" @click="ugurla">Uğurla</button>
+      <div class="alert alert-success">{{ message }}</div>
+      <button class="btn btn-sm btn-info" v-on:click="welcome">Karşıla</button>
+      <button class="btn btn-sm btn-danger" @click="goodLuck">Uğurla</button>
       <hr />
       <form @submit.prevent="true">
-          <div class="form-group row">
-              <label for="email" class="col-sm-3 col-form-label">Email</label>
-              <div class="col-sm-5">
-                  <input type="text" class="form-control" id="email" v-model="email" v-on:keypress.enter="emailKaydet">
-              </div>
+        <div class="form-group row">
+          <label for="email" class="col-sm-3 col-form-label">Email</label>
+          <div class="col-sm-5">
+            <input
+              type="text"
+              class="form-control"
+              id="email"
+              v-model="email"
+              v-on:keypress.enter="emailSave"
+            />
           </div>
+        </div>
       </form>
     </div>
-
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
       integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
@@ -42,23 +48,23 @@
     <script>
       const app = new Vue({
         el: "#app",
-        name: "Uzaktan Kurs",
+        name: "Remote Course",
         data: {
-          mesaj: "Merhaba",
-          email:''
+          message: "Merhaba",
+          email: "",
         },
         methods: {
-          karsila() {
-            this.mesaj = "Karşılandı";
+          welcome() {
+            this.message = "Karşılandı";
           },
-          ugurla() {
-            this.mesaj = "Ugurla";
+          goodLuck() {
+            this.message = "Uğurla";
           },
-          emailKaydet(){
-              if(this.email != null){
-                  this.mesaj = 'Email adresiniz kaydedildi.';
-              }
-          }
+          emailSave() {
+            if (this.email != null) {
+              this.message = "Email adresiniz kaydedildi.";
+            }
+          },
         },
       });
     </script>
