Form validation topic learned.

--- a/pages/7-events.html
+++ b/pages/7-events.html
@@ -19,6 +19,7 @@
       <button class="btn btn-sm btn-info" v-on:click="welcome">Karşıla</button>
       <button class="btn btn-sm btn-danger" @click="goodLuck">Uğurla</button>
       <hr />
+      <!-- Submit prevent sayfanın yenilenmemesi için kullanılır -->
       <form @submit.prevent="true">
         <div class="form-group row">
           <label for="email" class="col-sm-3 col-form-label">Email</label>
