--- a/projects/todoList/todoList.html
+++ b/projects/todoList/todoList.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container d-flex justify-content-between bd-highlight">
           <div class="p-2 bd-highlight">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="javascript:void(0)">
               <img src="../../images/icons/logo.svg" style="height: 28px" />
               Yapılacaklar Listesi
             </a>
@@ -71,7 +71,7 @@
               <li class="nav-item dropdown">
                 <a
                   class="nav-link dropdown-toggle"
-                  href="#"
+                  href="javascript:void(0)"
                   id="navbarDropdown"
                   role="button"
                   data-toggle="dropdown"
@@ -84,9 +84,9 @@
                   class="dropdown-menu dropdown-menu-right"
                   aria-labelledby="navbarDropdown"
                 >
-                  <a class="dropdown-item" href="#">Profil</a>
+                  <a class="dropdown-item" href="javascript:void(0)">Profil</a>
                   <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="#">Çıkış</a>
+                  <a class="dropdown-item" href="javascript:void(0)">Çıkış</a>
                 </div>
               </li>
             </ul>
@@ -97,51 +97,51 @@
       <main role="main" class="container">
         <div class="row">
           <div class="col-md-3" id="sidebar">
-            <h2>Listeler</h2>
+            <h2>Kategoriler</h2>
             <div class="list-group">
               <a
                 href="javascript:void(0)"
                 class="list-group-item list-group-item-action d-flex justify-content-between align-items-center"
-                v-for="listItem in listItems"
-                @click="changeListItem(listItem.Id)"
+                v-for="categoryItem in categoryItemList"
+                @click="changeCategoryItem(categoryItem.id)"
               >
-                {{ listItem.Title }}
+                {{ categoryItem.title }}
                 <span class="badge bg-primary"
-                  >{{ listItemCount(listItem.Title) }}</span
+                  >{{ categoryItemListCount(categoryItem.id) }}</span
                 >
               </a>
             </div>
             <hr />
             <input
               class="form-control"
-              placeholder="Yeni liste adını giriniz"
-              @keypress.enter="listItemSave"
-              v-model="newListItem.Title"
+              placeholder="Yeni kategori adını giriniz"
+              @keypress.enter="saveCategoryItem"
+              v-model="categoryAddItem.title"
             />
           </div>
           <div class="col-md-9">
             <h2>
-              {{ activeListItem.Title }}
-              <small> ({{ listItemCount(activeListItem.Title) }}) </small>
+              {{ selectedCategoryItem.title }}
+              <small> ({{ categoryItemListCount(selectedCategoryItem.id) }}) </small>
             </h2>
             <hr />
             <div class="row">
               <div class="col-md-12">
-                <form class="row" @submit.prevent="saveItem">
+                <form class="row" @submit.prevent="saveTaskItem">
                   <div class="col-12 col-sm pr-sm-0">
                     <input
                       type="text"
                       class="form-control"
                       id="todoItem"
                       placeholder="Yapılacak bir şey yazın..."
-                      v-model="dataItem.Title"
+                      v-model="taskAddItem.text"
                     />
                   </div>
                   <div class="col-12 col-sm-auto">
                     <button
                       type="submit"
                       class="btn btn-primary btn-block mb-2"
-                      :disabled="!dataItem.Title.length"
+                      :disabled="!taskAddItem.text.length"
                     >
                       Kaydet
                     </button>
@@ -151,32 +151,32 @@
             </div>
 
             <table class="table table-hover">
-              <tr v-show="todoList.length === 0">
+              <tr v-show="notCompletedTaskList.length === 0">
                 <td colspan="3">Yapılacak iş kalmadı :)</td>
               </tr>
-              <tr v-for="(data,index) in todoList">
+              <tr v-for="(notCompletedTaskItem,index) in notCompletedTaskList">
                 <td>
                   <a
-                    href="#"
+                    href="javascript:void(0)"
                     class="btn btn-sm btn-success"
-                    v-show="data.Status"
-                    @click="toggleTodoListStatus(index)"
+                    v-show="notCompletedTaskItem.status"
+                    @click="toggleNotCompletedTaskListStatus(index)"
                     ><i class="fa fa-check"></i
                   ></a>
                   <a
-                    href="#"
+                    href="javascript:void(0)"
                     class="btn btn-sm btn-secondary"
-                    v-show="!data.Status"
-                    @click="toggleTodoListStatus(index)"
+                    v-show="!notCompletedTaskItem.status"
+                    @click="toggleNotCompletedTaskListStatus(index)"
                     ><i class="fa fa-check"></i
                   ></a>
                 </td>
-                <td class="text-left w-100">{{ data.Title }}</td>
+                <td class="text-left w-100">{{ notCompletedTaskItem.text }}</td>
                 <td class="text-right">
                   <a
-                    href="#"
+                    href="javascript:void(0)"
                     class="btn btn-sm btn-danger"
-                    @click="deleteItem(data)"
+                    @click="taskDeleteItem(notCompletedTaskItem)"
                   >
                     <i class="fa fa-trash"></i>
                   </a>
@@ -187,27 +187,27 @@
             <h5 class="mt-5">Tamamlananlar</h5>
 
             <table class="table table-hover">
-              <tr v-show="todoListFinished.length === 0">
+              <tr v-show="completedTaskList.length === 0">
                 <td colspan="3">Tamamlanan iş bulunamadı :(</td>
               </tr>
-              <tr v-for="(data,index) in todoListFinished">
+              <tr v-for="(completedTaskItem,index) in completedTaskList">
                 <td>
                   <a
-                    href="#"
+                    href="javascript:void(0)"
                     class="btn btn-sm btn-success"
-                    v-show="data.Status"
-                    @click="toggleTodoListFinishedStatus(index)"
+                    v-show="completedTaskItem.status"
+                    @click="toggleCompletedTaskListStatus(index)"
                     ><i class="fa fa-check"></i
                   ></a>
                   <a
-                    href="#"
+                    href="javascript:void(0)"
                     class="btn btn-sm btn-secondary"
-                    v-show="!data.Status"
-                    @click="toggleTodoListFinishedStatus(index)"
+                    v-show="!completedTaskItem.status"
+                    @click="toggleCompletedTaskListStatus(index)"
                     ><i class="fa fa-check"></i
                   ></a>
                 </td>
-                <td class="text-left w-100">{{ data.Title }}</td>
+                <td class="text-left w-100">{{ completedTaskItem.text }}</td>
               </tr>
             </table>
           </div>
