--- a/applications/usermanagement/usermanagement.html
+++ b/applications/usermanagement/usermanagement.html
@@ -16,7 +16,7 @@
       rel="stylesheet"
       crossorigin="anonymous"
     />
-    <link rel="icon" type="image/x-icon" href="../images/icons/vue.ico" />
+    <link rel="icon" type="image/x-icon" href="../../images/icons/vue.ico" />
   </head>
   <body>
     <div id="app" class="p-5">
