--- a/topics/basic-structures/24-vue-resources.html
+++ b/topics/basic-structures/24-vue-resources.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fetchApi | Vue</title>
+    <title>Resources | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -58,7 +58,13 @@
           isLoading:true
         },
         created(){
-            //Daha detaylı bilgi için https://github.com/pagekit/vue-resource
+
+            /*
+              Ajax , Fetch API , Axios gibi yapılara alternatif olarak vue'nun kendi içerisindeki yapısı olan
+              vue-resources frameworkünüde kullanabiliriz.
+
+              Daha detaylı bilgi için https://github.com/pagekit/vue-resource adresini kullanabiliriz.
+            */
             
             this.$http.get('https://jsonplaceholder.typicode.com/todos')
             .then(response=>{
