--- a/topics/basic-structures/25-dbo-products-fetch.html
+++ b/topics/basic-structures/25-dbo-products-fetch.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>fetchApi | Vue</title>
+    <title>Json read | Vue</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,11 +62,11 @@
           isLoading: true,
         },
         created() {
-          //CQRS atası vermektedir.
+          //CQRS hatası vermektedir.
           fetch("../../jsons/db-products.json")
             .then((res) => {
               return res.json();
-            })
+            }) 
             .then((res) => {
               this.products = res.products;
             })
