Fixed the descriptions of the json-server file.

--- a/topics/basic-structures/27-json-server.html
+++ b/topics/basic-structures/27-json-server.html
@@ -20,6 +20,7 @@
        Json-server kurmak için cmd açılır ve ilgili klasör cd ile belirlenir.
        npm install -g json-server kurulur. / -g global'e kur demek.
        json-server -p 3001 db-products.json / -p port anlamına gelir.3001 bir port numarasıdır. & generate.js
+       Dosyamızı Json olarak belirlediğimizde json dosyasımız üzerinde crud işlemlerini gerçekleştirecektir.
        http://localhost:3001/ -> var olan verileri bölerek gösterir.
 
        Json server üzerinde oluşturduğumuz json dosyalarını kullanabliyorken rastgele değerler
